--- a/conf/shibboleth/webapp/web.xml
+++ b/conf/shibboleth/webapp/web.xml
@@ -8,7 +8,7 @@
         same named beans in previous files. -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>${idp.home}/system/conf/global-system.xml</param-value>
+        <param-value>${idp.home}/system/conf/global-system.xml classpath:applicationContext.xml</param-value>
     </context-param>
 
     <context-param>
