--- a/conf/tomcat/hst-identity-provider.properties.template
+++ b/conf/tomcat/hst-identity-provider.properties.template
@@ -7,7 +7,9 @@ hst.prompt.url ={{ hst_prompt_url }}
 ica.dir.path={{ ica_dir_path }}
 ca.dir.path={{ ca_dir_path }}
 crl.dir.path={{ crl_dir_path }}
-ca.orgname.set={{ ca_ou_name_list }}
 
-satu.issuer.delimiter={{ satu_issuer_delimiter }}
 crl.updatetime.validation={{ crl_updatetime_validation }}
+
+#Organization card specific properties
+oc.ca.orgname.set={{ oc_ca_cn_name_list }}
+vartti.client.endpoint = {{ vartti_client_url }}/vartti/person
