--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 
     <properties>
         <gson.version>2.3.1</gson.version>
-        <org.apache.httpclient.version>4.3.6</org.apache.httpclient.version>
+        <jersey.version>2.25</jersey.version>
         <org.apache.version>2.6</org.apache.version>
         <spring.version>4.1.4.RELEASE</spring.version>
         <junit.version>4.12</junit.version>
@@ -193,7 +193,20 @@
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
         </dependency>
-        
+
+        <!-- Jersey deps -->
+
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>
+
         <!-- Javax deps -->
 
         <dependency>
@@ -215,15 +228,6 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>${org.apache.version}</version>
-            <scope>provided</scope>
-       </dependency>
-
-        <!-- Org Apache http client -->
-
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>${org.apache.httpclient.version}</version>
             <scope>provided</scope>
        </dependency>
 
@@ -319,13 +323,27 @@
                         <exclude>src/test/**</exclude>
                         <exclude>**/*.properties</exclude>
                         <exclude>Dockerfile</exclude>
-		</excludes>
+            		</excludes>
                 </configuration>
                 <executions>
                     <execution>
                         <goals>
                             <goal>check</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.owasp</groupId>
+                <artifactId>dependency-check-maven</artifactId>
+                <version>1.4.3</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
