--- a/conf/tomcat/hst-identity-provider.properties.template
+++ b/conf/tomcat/hst-identity-provider.properties.template
@@ -12,6 +12,8 @@ crl.updatetime.validation={{ crl_updatetime_validation }}
 #crl cache entry expiration time in milliseconds
 crl.cache.expiration.time={{ crl_cache_timeout }}
 
+hst.ca.orgname.set={{ hst_ca_cn_name_list }}
+
 #Organization card specific properties
 oc.ca.orgname.set={{ oc_ca_cn_name_list }}
 vartti.client.endpoint = {{ vartti_client_url }}/vartti/person
