--- a/conf/tomcat/hst-identity-provider.properties.template
+++ b/conf/tomcat/hst-identity-provider.properties.template
@@ -1,7 +1,7 @@
 # Shibboleth Identity Provider properties
 failure.param.internal=hstint
 failure.param.entityid=entid
-hst.prompt.url ={{ hst_prompt_url }}
+hst.prompt.url={{ hst_prompt_url }}
 
 #Certificate util properties
 ica.dir.path={{ ica_dir_path }}
@@ -17,3 +17,6 @@ hst.ca.orgname.set={{ hst_ca_cn_name_list }}
 #Organization card specific properties
 oc.ca.orgname.set={{ oc_ca_cn_name_list }}
 vartti.client.endpoint = {{ vartti_client_url }}/vartti/person
+
+# switch to disable SCS functionality
+scs.enabled={{scs_enabled | default('true')}}
