--- a/pom.xml
+++ b/pom.xml
@@ -37,14 +37,14 @@
         <jersey.version>2.27</jersey.version>
         <junit.version>4.12</junit.version>
         <mockito.version>1.10.19</mockito.version>
-        <jackson.version>2.9.7</jackson.version>
+        <jackson.version>2.8.3</jackson.version>
 
         <!-- Versions included in the Shibboleth IdP package -->
         <commons.lang.version>2.4</commons.lang.version>
         <spring.version>4.3.19.RELEASE</spring.version>
         <spring.webflow.version>2.4.8.RELEASE</spring.webflow.version>
         <slf4j.version>1.7.25</slf4j.version>
-        <shibboleth.version>3.4.1</shibboleth.version>
+        <shibboleth.version>3.4.6</shibboleth.version>
 
         <!-- Spring security version to match the Shibboleth IdP provided Spring release-->
         <spring.security.version>4.2.8.RELEASE</spring.security.version>
@@ -282,6 +282,13 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
@@ -297,6 +304,7 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>${jackson.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
@@ -375,16 +383,18 @@
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>3.1.2</version>
+                <version>5.0.0-M3</version>
+                <configuration>
+                    <failBuildOnCVSS>11</failBuildOnCVSS>
+                    <suppressionFiles>${basedir}/suppressions.xml</suppressionFiles>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
                             <goal>check</goal>
                         </goals>
-                        <configuration>
-                        </configuration>
                     </execution>
-                </executions>
+              </executions>
             </plugin>
         </plugins>
     </build>
